--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,110 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
+  text-decoration: none;
+  list-style: none;
+}
 
+.container {
+  max-width: 1300px;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.header {
+  position: relative;
+  z-index: 2;
+}
+.header__nav {
+  position: fixed;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #002c5d;
+  padding: 20px 150px;
+}
+.header__nav span a {
+  font-size: 26px;
+  font-weight: 700;
+  text-transform: capitalize;
+  color: #fff;
+}
+.header__nav-list {
+  display: flex;
+  gap: 40px;
+}
+.header__nav-list-item a {
+  font-weight: 600;
+  text-transform: capitalize;
+  color: #fff;
+  transition: 0.5s ease;
+}
+.header__nav-list-item a:hover {
+  color: #3ac1ec;
+}
+
+.hero {
+  width: 100%;
+  background-image: url(/image/hero\ bg\ image.jpg);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  height: 100vh;
+}
+.hero__bgColor {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6);
+}
+.hero__wrapper {
+  position: absolute;
+  z-index: 1;
+  top: 34%;
+  left: 20%;
+}
+.hero h1 {
+  max-width: 700px;
+  font-size: 55px;
+  color: #fff;
+}
+.hero h1 span {
+  color: #3ac1ec;
+}
+.hero__text {
+  max-width: 730px;
+  color: #fff;
+  font-size: 18px;
+  font-weight: 200;
+  line-height: 24px;
+  margin: 20px 0 50px 0;
+}
+.hero__btn {
+  font-size: 18px;
+  text-transform: capitalize;
+  width: 180px;
+  height: 46px;
+  color: #fff;
+  background-color: #3ac1ec;
+  border: none;
+  margin: 0 0 20px 0;
+}
+.hero .fa-location-dot {
+  font-size: 20px;
+  color: #3ac1ec;
+  margin: 0 5px 0 0;
+}
+.hero__location {
+  font-size: 20px;
+  font-weight: 400;
+  color: #fff;
+}
+
+.about {
+  height: 100vh;
+  background-color: aliceblue;
+}
 
 /*# sourceMappingURL=main.css.map */
