--- a/css/main.css
+++ b/css/main.css
@@ -8,9 +8,10 @@
 }
 
 .container {
-  max-width: 1300px;
+  max-width: 1200px;
   width: 100%;
   margin: 0 auto;
+  padding: 20px;
 }
 
 .header {
@@ -45,7 +46,57 @@
 .header__nav-list-item a:hover {
   color: #3ac1ec;
 }
+.header__nav .fa-bars {
+  display: none;
+}
 
+@media screen and (max-width: 990px) {
+  .header__nav {
+    padding: 30px;
+  }
+  .header__nav-list {
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background-color: #002c5d;
+    top: 90px;
+    left: -100%;
+    text-align: center;
+    flex-direction: column;
+    align-items: center;
+    transition: all 0.5s;
+    padding: 60px 0 0 0;
+  }
+  .header__nav-list-item {
+    width: 90%;
+    margin: 10px 0 0 0;
+    padding: 20px 0;
+    border: 2px solid #3ac1ec;
+  }
+  .header__nav-list-item a {
+    font-size: 20px;
+  }
+  .header__nav-list-item a:hover {
+    color: #3ac1ec;
+  }
+  .header__nav-list.show {
+    left: 0;
+  }
+  .header__nav .fa-bars {
+    display: block;
+    font-size: 26px;
+    color: #fff;
+    cursor: pointer;
+  }
+}
+@media screen and (max-width: 660px) {
+  .header__nav {
+    padding: 20px;
+  }
+  .header__nav .fa-bars {
+    font-size: 24px;
+  }
+}
 .hero {
   width: 100%;
   background-image: url(/image/hero\ bg\ image.jpg);
@@ -102,6 +153,20 @@
   color: #fff;
 }
 
+@media screen and (max-width: 990px) {
+  .hero__wrapper {
+    top: 34%;
+    left: 4%;
+  }
+}
+@media screen and (max-width: 660px) {
+  .hero {
+    height: 120vh;
+  }
+  .hero__bgColor {
+    height: 120%;
+  }
+}
 .about {
   height: 100vh;
   background-color: aliceblue;
