--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -8,9 +8,10 @@
 }
 
 .container {
-    max-width: 1300px;
+    max-width: 1200px;
     width: 100%;
     margin: 0 auto;
+    padding: 20px;
 }
 
 $primaryColor: #002c5d;
@@ -22,6 +23,7 @@ $white: #fff;
 @mixin title {
     font-size: 44px;
     font-weight: 600;
+    text-transform: capitalize;
 }
 
 @mixin btn {
