--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -32,5 +32,62 @@
             }
 
         }
+        .fa-bars {
+            display: none;
+        }
+    }
+}
+
+
+@media screen and (max-width: 990px) {
+    .header {
+        &__nav {
+            padding: 30px;
+            &-list {
+                position: fixed;
+                width: 100%;
+                height: 100vh;
+                background-color: $primaryColor;
+                top: 90px;
+                left: -100%;
+                text-align: center;
+                flex-direction: column;
+                align-items: center;
+                transition: all .5s;
+                padding: 60px 0 0 0;
+                &-item {
+                    width: 90%;
+                    margin: 10px 0 0 0;
+                    padding: 20px 0;
+                    border: 2px solid $lightBlue;
+                    a {
+                        font-size: 20px;
+                    }
+                    a:hover {
+                        color: $lightBlue;
+                    }
+                }
+            }
+            &-list.show {
+                left: 0;
+            }
+            .fa-bars {
+                display: block;
+                font-size: 26px;
+                color: $white;
+                cursor: pointer;
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 660px) {
+    .header {
+        &__nav {
+            padding: 20px;
+            .fa-bars {
+                font-size: 24px;
+            }    
+        }
     }
 }
