--- a/css/test.css
+++ b/css/test.css
@@ -14,13 +14,19 @@
   padding: 20px;
 }
 
+.header {
+  position: relative;
+  z-index: 2;
+}
 .header__nav {
+  position: fixed;
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
   background-color: #002c5d;
   padding: 20px 150px;
+  top: 0;
 }
 .header__nav span a {
   font-size: 26px;
@@ -46,33 +52,34 @@
 }
 
 @media screen and (max-width: 990px) {
-  .header {
-    position: relative;
-  }
   .header__nav {
-    padding: 30px;
+    padding: 20px 30px;
+  }
+}
+@media screen and (max-width: 660px) {
+  .header__nav {
+    padding: 20px;
   }
   .header__nav-list {
     position: fixed;
     width: 100%;
     height: 100vh;
     background-color: #002c5d;
-    top: 89px;
+    top: 70px;
     left: -100%;
     text-align: center;
-    transition: all 0.5s;
     flex-direction: column;
     align-items: center;
+    transition: all 0.5s;
     padding: 60px 0 0 0;
   }
   .header__nav-list-item {
     width: 90%;
-    margin: 10px 0 0 0;
-    padding: 20px 0;
-    border: 1px solid #3ac1ec;
+    padding: 10px 0;
+    border: 2px solid #3ac1ec;
   }
   .header__nav-list-item a {
-    font-size: 20px;
+    font-size: 14px;
   }
   .header__nav-list-item a:hover {
     color: #3ac1ec;
@@ -82,9 +89,20 @@
   }
   .header__nav .fa-bars {
     display: block;
-    font-size: 26px;
+    font-size: 24px;
     color: #fff;
     cursor: pointer;
+  }
+}
+@media screen and (max-width: 660px) {
+  .header__nav {
+    padding: 20px;
+  }
+  .header__nav-list {
+    top: 60px;
+  }
+  .header__nav .fa-bars {
+    font-size: 24px;
   }
 }
 .hero {
