--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -42,13 +42,22 @@
 @media screen and (max-width: 990px) {
     .header {
         &__nav {
-            padding: 30px;
+            padding: 20px 30px;
+        }
+    }
+}
+
+
+@media screen and (max-width: 660px) {
+    .header {
+        &__nav {
+            padding: 20px;
             &-list {
                 position: fixed;
-                width: 100%;
+                width: 50%;
                 height: 100vh;
-                background-color: $primaryColor;
-                top: 90px;
+                background-color: rgba($color: #000, $alpha: .9);
+                top: 0px;
                 left: -100%;
                 text-align: center;
                 flex-direction: column;
@@ -57,11 +66,12 @@
                 padding: 60px 0 0 0;
                 &-item {
                     width: 90%;
-                    margin: 10px 0 0 0;
-                    padding: 20px 0;
+                    // margin: 10px 0 0 0;
+                    padding: 10px 0;
                     border: 2px solid $lightBlue;
+                    box-shadow: 2px 2px 5px $lightBlue;
                     a {
-                        font-size: 20px;
+                        font-size: 14px;
                     }
                     a:hover {
                         color: $lightBlue;
@@ -73,7 +83,7 @@
             }
             .fa-bars {
                 display: block;
-                font-size: 26px;
+                font-size: 24px;
                 color: $white;
                 cursor: pointer;
             }
@@ -81,13 +91,16 @@
     }
 }
 
-@media screen and (max-width: 660px) {
-    .header {
-        &__nav {
-            padding: 20px;
-            .fa-bars {
-                font-size: 24px;
-            }    
-        }
-    }
-}
+// @media screen and (max-width: 660px) {
+//     .header {
+//         &__nav {
+//             padding: 20px;
+//             &-list {
+//                 top: 60px;
+//             }
+//             .fa-bars {
+//                 font-size: 24px;
+//             }    
+//         }
+//     }
+// }
