--- a/scss/blocks/_hero.scss
+++ b/scss/blocks/_hero.scss
@@ -56,6 +56,9 @@
             top: 34%;
             left: 4%;
         }
+        h1 {
+            font-size: 45px;
+        }
     }
 }
 
@@ -65,6 +68,9 @@
         height: 120vh;
         &__bgColor {
             height: 120%;
+        }
+        h1 {
+            font-size: 40px;
         }
     }
 }
