--- a/scss/blocksTest/_headerTest.scss
+++ b/scss/blocksTest/_headerTest.scss
@@ -1,5 +1,8 @@
 .header {
+    position: relative;
+    z-index: 2;
     &__nav {
+        position: fixed;
         width: 100%;
         display: flex;
         align-items: center;
@@ -7,6 +10,7 @@
         // background-color: transparent;
         background-color: $primaryColor;
         padding: 20px 150px;
+        top: 0;
         span a {
             font-size: 26px;
             font-weight: 700;
@@ -27,6 +31,7 @@
                     color: $lightBlue;
                 }
             }
+
         }
         .fa-bars {
             display: none;
@@ -35,31 +40,38 @@
 }
 
 
-
 @media screen and (max-width: 990px) {
     .header {
-        position: relative;
         &__nav {
-            padding: 30px;
+            padding: 20px 30px;
+        }
+    }
+}
+
+
+@media screen and (max-width: 660px) {
+    .header {
+        &__nav {
+            padding: 20px;
             &-list {
                 position: fixed;
                 width: 100%;
                 height: 100vh;
                 background-color: $primaryColor;
-                top: 89px;
+                top: 70px;
                 left: -100%;
                 text-align: center;
-                transition: all .5s;
                 flex-direction: column;
                 align-items: center;
+                transition: all .5s;
                 padding: 60px 0 0 0;
                 &-item {
                     width: 90%;
-                    margin: 10px 0 0 0;
-                    padding: 20px 0;
-                    border: 1px solid $lightBlue;
+                    // margin: 10px 0 0 0;
+                    padding: 10px 0;
+                    border: 2px solid $lightBlue;
                     a {
-                        font-size: 20px;
+                        font-size: 14px;
                     }
                     a:hover {
                         color: $lightBlue;
@@ -71,10 +83,24 @@
             }
             .fa-bars {
                 display: block;
-                font-size: 26px;
+                font-size: 24px;
                 color: $white;
                 cursor: pointer;
             }
+        }
+    }
+}
+
+@media screen and (max-width: 660px) {
+    .header {
+        &__nav {
+            padding: 20px;
+            &-list {
+                top: 60px;
+            }
+            .fa-bars {
+                font-size: 24px;
+            }    
         }
     }
 }
